Made employee home responsive

--- a/src/frontend/src/index.css
+++ b/src/frontend/src/index.css
@@ -263,6 +263,35 @@ div.currentTaskContent.noTasks {
     margin: 10px;
 }
 
+@media only screen and (max-width: 1155px) {
+ 
+.toDoList{
+    margin-top: 2.5rem;
+} 
+.taskList{
+    flex-direction: column-reverse;
+}
+.task{
+    width: 170%;
+}
+.currentTask{
+    width: 90%;
+}
+    
+}
+
+@media only screen and (max-width: 500px) {
+ 
+.duration{
+    padding: 0.5rem;
+}
+.task{
+    padding: 1em 1em 1em 1em;
+}
+
+}
+    
+
 /*----------------POP UP----------------*/
 .popUpBackground {
     position: fixed;
