--- a/src/frontend/src/MyEmployees.css
+++ b/src/frontend/src/MyEmployees.css
@@ -30,14 +30,27 @@
     color: #646464;
 }
 
-.taskList {
+.aTaskList {
+    width: 80vw;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 40px;
+    justify-content: space-between;
+
     display: inline-flex;
     flex-direction: column;
     align-items: flex-end;
     max-width: 100%;
 }
 
-.task {
+.aTask {
+    margin: 0 0 30px 0;
+    border-radius: 20px;
+    display: inline-flex;
+    width: 500px;
+    justify-content: space-around;
+    align-items: center;
     background-color: white;
     width: 70%;
     padding: 20px;
