Employee css mistakes fixed

--- a/src/frontend/src/MyEmployees.css
+++ b/src/frontend/src/MyEmployees.css
@@ -101,7 +101,7 @@
     flex-flow: column wrap;
     justify-content: center;
 }
-.popUp button {
+.btnX {
     font-size: 150%;
     border: none;
     margin-left: 1rem;
