--- a/src/frontend/src/EmployerHome.css
+++ b/src/frontend/src/EmployerHome.css
@@ -42,3 +42,9 @@
     font-size: 40px;
 }
 
+.employeePic {
+    height: 150px;
+    width: 150px;
+    object-fit: cover;
+    border-radius: 50%;
+}
