--- a/src/frontend/src/MyEmployees.css
+++ b/src/frontend/src/MyEmployees.css
@@ -15,6 +15,13 @@
     padding: 30px 60px;
 }
 
+.employeePic {
+    height: 150px;
+    width: 150px;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
 .employeeTop {
     display: flex;
     justify-content: space-between;
